[tool.poetry]
name = "voicer"
version = "0.1.0"
description = ""
authors = ["Matias Pierobon <matias.pierobonm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.2.10"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "voicer.main:run"
